AC_INIT([Minimalistic autotools boiler plate project for C++ applications/libraries],
        [0.1],
        [evilissimo@gmail.com],
        [auto-boilerplate],
        [http://github.com/vinzenz/auto-boilerplate])
AC_PREREQ([2.59])

AM_INIT_AUTOMAKE([1.10 -Wall no-define subdir-objects])

AC_PROG_CXX
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([nsenter-pty.c])
LT_INIT

AC_CONFIG_FILES([
    Makefile
])
AC_OUTPUT
