AC_INIT([attach to linux namespaces],
        [1],
        [joerg@higgsboson.tk],
        [nsattach],
        [http://github.com/Mic92/nsattach])
AC_PREREQ([2.59])

AM_INIT_AUTOMAKE([1.10 -Wall no-define subdir-objects])

AC_PROG_CXX
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([nsattach.c])
LT_INIT

AC_CONFIG_FILES([
    Makefile
])
AC_OUTPUT
